feat: add database models and migrations

--- a/backend/Elezea/appsettings.Development.json
+++ b/backend/Elezea/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=elezea.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
