--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "https-proxy-agent": "^7.0.6",
     "next": "15.4.4",
+    "node-fetch": "^3.3.2",
     "react": "19.1.0",
     "react-country-flag": "^3.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "undici": "^7.13.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.13",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
