--- a/backend/Elezea/appsettings.Development.json
+++ b/backend/Elezea/appsettings.Development.json
@@ -7,5 +7,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "GeminiAI": {
+    "ApiKey": "GEMINI_API_KEY",
+    "Model": "gemini-2.0-flash-exp"
   }
 }
