--- a/backend/Elezea/appsettings.json
+++ b/backend/Elezea/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "GeminiAI": {
+    "ApiKey": "GEMINI_API_KEY",
+    "Model": "gemini-2.0-flash-exp"
+  }
 }
